fix a typo that hid the skull

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="content">
         <div class="selection"> 
             <div class="player">
-                <img src="skull.png" alt="">
+                <img src="Skull.png" alt="">
                 <span class="scoring">Human: <span class="score">0</span></span>
                 <span class="instruction">Choose a weapon!</span>
             </div>
