darken unavailable buttons

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+<!-- TODO: disable apple's double click zooming -->
+<!-- TODO: Fix apple icon -->
     <link rel="icon"  href="./slay.png" type="image/png"> 
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
@@ -39,7 +40,8 @@
             <input type="image" src="paper.png" alt="Picture of a hand showing a paper symbol" data-choice = "paper" class="hoverable">
             <input type="image" src="scissor.png" alt="Picture of a hand showing a scissor symbol" data-choice = "scissor" class="hoverable">
         </div>
-        <div class="btn-container">
+        <div class="btn-container"> 
+            <!-- TODO: make reset hover over the whole page (in place of the buttons) and fade the background (perhaps confetti for victory?) -->
             <button id="reset" class="hoverable">Reset</button>
         </div>
     </div>    
